fixed spacing

--- a/public/muse/css/eligibility.css
+++ b/public/muse/css/eligibility.css
@@ -195,21 +195,21 @@ html
 #menuu288
 {
 	z-index: 199;
-	width: 66px;
+	width: 96px;
 	margin-right: -10000px;
 	left: 994px;
 }
 
 #u281,#u305
 {
-	width: 66px;
+	width: 96px;
 	min-height: 50px;
 	margin-right: -10000px;
 }
 
 #u306
 {
-	width: 66px;
+	width: 96px;
 	padding-bottom: 33px;
 }
 
@@ -225,7 +225,7 @@ html
 
 #u307-4
 {
-	width: 66px;
+	width: 96px;
 	min-height: 17px;
 	margin-right: -10000px;
 	top: 16px;
