--- a/public/muse/css/index.css
+++ b/public/muse/css/index.css
@@ -1111,7 +1111,7 @@ html
 #menuu500
 {
 	z-index: 113;
-	width: 76px;
+	width: 113px;
 	position: relative;
 	margin-right: -10000px;
 	left: 665px;
@@ -1119,7 +1119,7 @@ html
 
 #u517
 {
-	width: 76px;
+	width: 113px;
 	min-height: 50px;
 	position: relative;
 	margin-right: -10000px;
